[package]
name = "amm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = {version = "0.29.2"}
async-graphql = "6.0.6"
dlc = { version = "0.4.0", path = "../rust-dlc/dlc" }
sea-orm = "0.12.2"
serde = { version = "1.0.188", features = ["derive"]}
serde_json = "1.0.107"
amplify = { version = "4.1.1", features = ["derive"] }
noisy_float = "0.2.0"

[dev-dependencies]
proptest = "1.2.0"
